Update Kubernetes version in CI/CD pipeline
Updated Kubernetes version to 1.29.0 for compatibility with Minikube v1.37.0.

--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -94,7 +94,9 @@ jobs:
         uses: medyagh/setup-minikube@v0.0.12
         with:
           driver: docker
-          kubernetes-version: 'v1.23.1' # Versão estável do Kubernetes
+          # --- CORREÇÃO APLICADA AQUI ---
+          # Atualiza a versão do Kubernetes para uma suportada pelo Minikube v1.37.0
+          kubernetes-version: 'v1.29.0'
           
       # 3. Faz o deploy ou atualização usando o Helm
       - name: Deploy com Helm
